--- a/public/index.html
+++ b/public/index.html
@@ -116,9 +116,9 @@
     </div>
     </div>
   </div>
-  
-  
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqt-4z56FVpE_cDhXJ-CMQjbO35C8x-JI"></script>
+
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=<KEYHERE>"></script>
   <script src="jquery/dist/jquery.min.js"></script>
   <script src="angular/angular.min.js"></script>
   <script src="angular-animate/angular-animate.min.js"></script>
